--- a/Resources/views/Page/index.html.twig
+++ b/Resources/views/Page/index.html.twig
@@ -38,7 +38,7 @@ filter='cssrewrite,?uglifycss' %}
 <!-- social media -->
 <!-- Twitter cards support -->
 <meta name="twitter:card" content="summary">
-<meta name="twitter:site" content="fh_rm">
+<meta name="twitter:site" content="{{ twitter }}">
 <meta name="twitter:title" content="{{ title }}">
 <meta name="twitter:description" content="{{ description }}">
 <meta name="twitter:creator" content="coderbyheart">
@@ -1371,7 +1371,7 @@ filter='cssrewrite,?uglifycss' %}
     <div class="row">
       <div class="span10 offset1 text-center">
         <div class="tweet"></div>
-        <a href="#" class="btn btn-follow">Follow Us <i class="iconf-twitter"></i></a> </div>
+        <a href="https://twitter.com/{{ twitter }}" class="btn btn-follow" rel="me" target="_blank">Follow Us <i class="iconf-twitter"></i></a> </div>
     </div>
     <!-- end row -->
   </div>
@@ -1444,7 +1444,7 @@ filter='cssrewrite,?uglifycss' %}
         <p><i class="iconf-mail"></i> Email: <a href="info@eventify2014.com">info@eventify2014.com</a> </p>
       </div>
       <div class="span12 text-center">
-        <div class="social"> <a href="#" target="_blank" title="Facebook" class="icon-wrap small facebook"> <i class="iconf-facebook"></i> </a> <a href="#" target="_blank" title="Twitter" class="icon-wrap small twitter"> <i class="iconf-twitter"></i> </a> <a href="#" target="_blank" title="Google+" class="icon-wrap small google"> <i class="iconf-gplus"></i> </a> <a href="#" target="_blank" title="Linkedin" class="icon-wrap small linkedin"> <i class="iconf-linkedin"></i> </a> <a href="#" target="_blank" title="RSS" class="icon-wrap small rss"><i class="iconf-rss"></i> </a> <a href="#" target="_blank" title="Vimeo" class="icon-wrap small vimeo"> <i class="iconf-vimeo"></i> </a> <a href="#" target="_blank" title="Flickr" class="icon-wrap small flickr"> <i class="iconf-flickr"></i> </a> <a href="#" target="_blank" title="Lanyrd" class="icon-wrap small lanyrd"> <i class="iconf-lanyrd"></i> </a> <a href="#" target="_blank" title="Eventbrite" class="icon-wrap small eventbrite"> <i class="iconf-eventbrite"></i> </a> <a href="#" target="_blank" title="Eventful" class="icon-wrap small eventful"> <i class="iconf-eventful"></i> </a> </div>
+        <div class="social"> <a href="#" target="_blank" title="Facebook" class="icon-wrap small facebook"> <i class="iconf-facebook"></i> </a> <a href="https://twitter.com/{{ twitter }}" target="_blank" title="Twitter" class="icon-wrap small twitter" rel="me"> <i class="iconf-twitter"></i> </a> <a href="#" target="_blank" title="Google+" class="icon-wrap small google"> <i class="iconf-gplus"></i> </a> <a href="#" target="_blank" title="Linkedin" class="icon-wrap small linkedin"> <i class="iconf-linkedin"></i> </a> <a href="#" target="_blank" title="RSS" class="icon-wrap small rss"><i class="iconf-rss"></i> </a> <a href="#" target="_blank" title="Vimeo" class="icon-wrap small vimeo"> <i class="iconf-vimeo"></i> </a> <a href="#" target="_blank" title="Flickr" class="icon-wrap small flickr"> <i class="iconf-flickr"></i> </a> <a href="#" target="_blank" title="Lanyrd" class="icon-wrap small lanyrd"> <i class="iconf-lanyrd"></i> </a> <a href="#" target="_blank" title="Eventbrite" class="icon-wrap small eventbrite"> <i class="iconf-eventbrite"></i> </a> <a href="#" target="_blank" title="Eventful" class="icon-wrap small eventful"> <i class="iconf-eventful"></i> </a> </div>
       </div>
     </div>
     <!-- end row -->
