--- a/Resources/views/Page/index.html.twig
+++ b/Resources/views/Page/index.html.twig
@@ -1510,7 +1510,8 @@ output='js/*.min.js' %}
 <script type="text/javascript" src="{{ asset(asset_url) }}"></script>
 {% endjavascripts %}
 
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+<script type="text/javascript" src="//maps.google.com/maps/api/js?sensor=true"></script>
 <!-- Google analytics here -->
 </body>
 </html>
+int
