Use unminified JS deps.

--- a/Resources/views/Page/index.html.twig
+++ b/Resources/views/Page/index.html.twig
@@ -1490,20 +1490,19 @@ filter='cssrewrite,?uglifycss' %}
 <!-- javascripts -->
 <!-- Placed at the end of the document so the pages load faster -->
 {% javascripts
-'bundles/foundershubstartupweekend/js/jquery-1.10.2.min.js'
-'bundles/foundershubstartupweekend/js/jquery.mobile-1.0.min.js'
-'bundles/foundershubstartupweekend/js/jquery.ui.map.min.js'
-'bundles/foundershubstartupweekend/js/bootstrap.min.js'
-'bundles/foundershubstartupweekend/js/jquery.flexslider-min.js'
+'bundles/foundershubstartupweekend/js/jquery-1.10.2.js'
+'bundles/foundershubstartupweekend/js/jquery.mobile-1.0.js'
+'bundles/foundershubstartupweekend/js/jquery.flexslider.js'
 'bundles/foundershubstartupweekend/js/jquery.carousel.js'
-'bundles/foundershubstartupweekend/js/jquery.scrollTo-1.4.3.1-min.js'
+'bundles/foundershubstartupweekend/js/jquery.scrollTo.js'
 'bundles/foundershubstartupweekend/js/jquery.parallax-1.1.3.js'
-'bundles/foundershubstartupweekend/js/jquery.localscroll-1.2.7-min.js'
+'bundles/foundershubstartupweekend/js/jquery.localScroll.js'
 'bundles/foundershubstartupweekend/js/jquery.nav.js'
-'bundles/foundershubstartupweekend/js/jquery.countdown.min.js'
-'bundles/foundershubstartupweekend/js/jquery.validationengine-en.min.js'
-'bundles/foundershubstartupweekend/js/jquery.validationengine.min.js'
-'bundles/foundershubstartupweekend/js/tweetie.min.js'
+'bundles/foundershubstartupweekend/js/jquery.countdown.js'
+'bundles/foundershubstartupweekend/js/jquery.validationengine-en.js'
+'bundles/foundershubstartupweekend/js/jquery.validationengine.js'
+'bundles/foundershubstartupweekend/js/bootstrap.js'
+'bundles/foundershubstartupweekend/js/tweetie.js'
 'bundles/foundershubstartupweekend/js/custom.js'
 filter='?uglifyjs2'
 output='js/*.min.js' %}
@@ -1514,4 +1513,3 @@ output='js/*.min.js' %}
 <!-- Google analytics here -->
 </body>
 </html>
-int
