fix(mobile): handle long words

--- a/Resources/views/Page/index.html.twig
+++ b/Resources/views/Page/index.html.twig
@@ -1,6 +1,6 @@
-{% set org = "FoundersHub" %}
+{% set org = "Founders​Hub" %}
 {% set org_url = "http://www.startupweekendrheinmain.de/" %}
-{% set title = org ~ " StartupWeekend" %}
+{% set title = org ~ " Startup Weekend" %}
 {% set description = title ~ " is a 54 hour frenzy of business model creation, coding, designing, and market validation. Come share ideas, form teams, and launch startups." %}
 {% set event_start = '2015-09-27T18:00:00+02:00' %}
 {% set event_end = '2015-09-29T21:00:00+02:00' %}
