--- a/Resources/views/Page/index.html.twig
+++ b/Resources/views/Page/index.html.twig
@@ -300,12 +300,13 @@ filter='cssrewrite,?uglifycss' %}
       <div class="span12 hero-unit text-center">
         <h2>Be the first to know when the ticket sales starts!</h2>
       </div>
-      <form action="#">
+
+      <form action="//startupweekend-rheinmain.us4.list-manage.com/subscribe/post?u=408757266f397b128aeb12669&amp;id=aa813194b9" method="post" target="_blank">
         <div class="control-group span4 offset4 text-center">
-          <!--<label for="subscribe-email" class="control-label">Email:</label>-->
           <div class="controls">
-            <input type="email" id="subscribe-email" class="input-block-level" value="Your Email Address" required />
+            <input type="email" id="subscribe-email" class="input-block-level" value="Your Email Address" required name="EMAIL" />
             <input type="submit" class="btn btn-primary" value="Subscribe" />
+            <input type="hidden" name="EMAILTYPE" value="html" />
           </div>
         </div>
       </form>
