--- a/Resources/views/partials/index/sponsors.html.twig
+++ b/Resources/views/partials/index/sponsors.html.twig
@@ -1,4 +1,5 @@
-{% for sponsor in sponsors|default([]) %}
+{% for sponsor in startupweekend_content('Sponsor') %}
+{% if loop.first %}
 <section id="sponsors">
     <div class="container">
         <div class="row">
@@ -7,50 +8,18 @@
                     <h4>Sponsors</h4>
                 </div>
             </div>
-            <!-- end module-header -->
             <div class="span12 hero-unit text-center">
-                <h2>Sponsorship plays a major role in the success of our event.</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dapibus iaculis porta. Vivamus mattis tempus aliquet.</p>
+                <h2>{{ title }} is proudly supported by these awesome sponsors</h2>
             </div>
-            <!-- end hero-unit -->
-            <div class="span12 text-center">
-                <div class="subheader">
-                    <h4>Main Sponsors</h4>
-                </div>
-                <!-- -->
+{% endif %}
+            <div class="span3 text-center">
+                <a href="{{ sponsor.link }}" rel="friend met">
+                    <img src="{{ sponsor.logo.file.thumbnails.sponsor }}" alt="{{ sponsor.name }}" class="sponsor-logo">
+                </a>
             </div>
-            <!-- end span12 -->
-            <div class="span4 text-center"> <a href="#"> <img src="{{ asset("bundles/foundershubstartupweekend/images/sponsors/01.png") }}" alt="" class="sponsor-logo"> </a> </div>
-            <div class="span4 text-center"> <a href="#"> <img src="{{ asset("bundles/foundershubstartupweekend/images/sponsors/02.png") }}" alt="" class="sponsor-logo"> </a> </div>
-            <div class="span4 text-center"> <a href="#"> <img src="{{ asset("bundles/foundershubstartupweekend/images/sponsors/03.png") }}" alt="" class="sponsor-logo"> </a> </div>
-            <div class="span12">
-                <div class="subheader">
-                    <h4>Collaborators</h4>
-                </div>
-                <!-- -->
-            </div>
-            <!-- end span12 -->
-            <div class="span3 text-center"> <a href="#"> <img src="{{ asset("bundles/foundershubstartupweekend/images/sponsors/04.png") }}" alt="" class="sponsor-logo"> </a> </div>
-            <div class="span3 text-center"> <a href="#"> <img src="{{ asset("bundles/foundershubstartupweekend/images/sponsors/05.png") }}" alt="" class="sponsor-logo"> </a> </div>
-            <div class="span3 text-center"> <a href="#"> <img src="{{ asset("bundles/foundershubstartupweekend/images/sponsors/06.png") }}" alt="" class="sponsor-logo"> </a> </div>
-            <div class="span3 text-center"> <a href="#"> <img src="{{ asset("bundles/foundershubstartupweekend/images/sponsors/07.png") }}" alt="" class="sponsor-logo"> </a> </div>
-            <div class="span12">
-                <div class="subheader">
-                    <h4>Media Sponsors</h4>
-                </div>
-                <!-- -->
-            </div>
-            <!-- end span12 -->
-            <div class="span2 text-center"> <a href="#"> <img src="{{ asset("bundles/foundershubstartupweekend/images/sponsors/08.png") }}" alt="" class="sponsor-logo"> </a> </div>
-            <div class="span2 text-center"> <a href="#"> <img src="{{ asset("bundles/foundershubstartupweekend/images/sponsors/09.png") }}" alt="" class="sponsor-logo"> </a> </div>
-            <div class="span2 text-center"> <a href="#"> <img src="{{ asset("bundles/foundershubstartupweekend/images/sponsors/10.png") }}" alt="" class="sponsor-logo"> </a> </div>
-            <div class="span2 text-center"> <a href="#"> <img src="{{ asset("bundles/foundershubstartupweekend/images/sponsors/11.png") }}" alt="" class="sponsor-logo"> </a> </div>
-            <div class="span2 text-center"> <a href="#"> <img src="{{ asset("bundles/foundershubstartupweekend/images/sponsors/12.png") }}" alt="" class="sponsor-logo"> </a> </div>
-            <div class="span2 text-center"> <a href="#"> <img src="{{ asset("bundles/foundershubstartupweekend/images/sponsors/13.png") }}" alt="" class="sponsor-logo"> </a> </div>
+{% if loop.last %}
         </div>
-        <!-- end row -->
     </div>
-    <!-- end container -->
 </section>
-<!-- end sponsors -->
+{% endif %}
 {% endfor %}
