--- a/Resources/public/css/style.css
+++ b/Resources/public/css/style.css
@@ -328,14 +328,14 @@ input:focus:invalid:focus, textarea:focus:invalid:focus, select:focus:invalid:fo
 }
 .top-bar .navbar .nav > li > a:hover, .top-bar.alt .navbar .nav > li > a:hover {
 	color: #FFFFFF;
-	background: #48A3A6 !important;
+	background: #48A3A6;
 }
 .top-bar .navbar .nav > li > a:focus, .top-bar.alt .navbar .nav > li > a:focus {
 	outline: 0;
 }
 .top-bar .nav .current a, .top-bar.alt .nav .current a {
-	color: #FFFFFF !important;
-	background: #4C5D67 !important;
+	color: #FFFFFF;
+	background: #4C5D67;
 }
 /* Top Bar Scroll Styles */
 .top-bar.alt {
