--- a/Resources/views/Page/index.html.twig
+++ b/Resources/views/Page/index.html.twig
@@ -8,54 +8,53 @@
 <!DOCTYPE html>
 <html lang="{{ locale }}">
 <head>
-<!-- Basic Page Needs -->
-<meta charset="utf-8" />
-<title>{{ title }}</title>
-<!-- Metas -->
-<meta name="description" content="{{ description }}" />
-<!-- Mobile Specific Metas -->
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<!-- Stylesheets -->
-{% stylesheets
-'bundles/foundershubstartupweekend/css/bootstrap.css'
-'bundles/foundershubstartupweekend/css/bootstrap-responsive.css'
-'bundles/foundershubstartupweekend/css/style.css'
-'bundles/foundershubstartupweekend/css/style_additions.css'
-'bundles/foundershubstartupweekend/css/fonts.css'
-'bundles/foundershubstartupweekend/css/fontello.css'
-'bundles/foundershubstartupweekend/css/jquery.countdown.css'
-'bundles/foundershubstartupweekend/css/flexslider.css'
-filter='cssrewrite,?uglifycss' %}
-<link rel="stylesheet" href="{{ asset(asset_url) }}">
-{% endstylesheets %}
-<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-<!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-<![endif]-->
-<!-- Favicon and touch icons -->
-<link rel="apple-touch-icon" href="{{ asset("bundles/foundershubstartupweekend/images/touch-icon-iphone.png") }}">
-<link rel="apple-touch-icon" sizes="76x76" href="{{ asset("bundles/foundershubstartupweekend/images/touch-icon-ipad.png") }}">
-<link rel="apple-touch-icon" sizes="120x120" href="{{ asset("bundles/foundershubstartupweekend/images/touch-icon-iphone-retina.png") }}">
-<link rel="apple-touch-icon" sizes="152x152" href="{{ asset("bundles/foundershubstartupweekend/images/touch-icon-ipad-retina.png") }}">
-<link rel="shortcut icon" href="{{ asset("bundles/foundershubstartupweekend/images/favicon.ico") }}">
-<!-- social media -->
-<!-- Twitter cards support -->
-<meta name="twitter:card" content="summary">
-<meta name="twitter:site" content="{{ twitter }}">
-<meta name="twitter:title" content="{{ title }}">
-<meta name="twitter:description" content="{{ description }}">
-<meta name="twitter:creator" content="coderbyheart">
-{% image '@FoundershubStartupWeekendBundle/Resources/public/images/logo.png' %}
-<meta name="twitter:image:src" content="{{ app.request.uriForPath(asset_url) }}">
-{% endimage %}
-<!-- Facebook open graph support -->
-<meta property="og:title" content="{{ title }}">
-<meta property="og:description" content="{{ description }}">
-<meta property="og:site_name" content="{{ title }}">
-{% image '@FoundershubStartupWeekendBundle/Resources/public/images/logo.png' %}
-<meta property="og:image" content="{{ app.request.uriForPath(asset_url) }}">
-{% endimage %}
-<meta property="og:type" content="website">
+  <!-- Basic Page Needs -->
+  <meta charset="utf-8" />
+  <title>{{ title }}</title>
+  <!-- Metas -->
+  <meta name="description" content="{{ description }}" />
+  <!-- Mobile Specific Metas -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Stylesheets -->
+  {% stylesheets
+  'bundles/foundershubstartupweekend/css/bootstrap.css'
+  'bundles/foundershubstartupweekend/css/bootstrap-responsive.css'
+  'bundles/foundershubstartupweekend/css/style_additions.css'
+  'bundles/foundershubstartupweekend/css/fonts.css'
+  'bundles/foundershubstartupweekend/css/fontello.css'
+  'bundles/foundershubstartupweekend/css/jquery.countdown.css'
+  'bundles/foundershubstartupweekend/css/flexslider.css'
+  filter='cssrewrite,?uglifycss' %}
+  <link rel="stylesheet" href="{{ asset(asset_url) }}">
+  {% endstylesheets %}
+  <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+  <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
+  <!-- Favicon and touch icons -->
+  <link rel="apple-touch-icon" href="{{ asset("bundles/foundershubstartupweekend/images/touch-icon-iphone.png") }}">
+  <link rel="apple-touch-icon" sizes="76x76" href="{{ asset("bundles/foundershubstartupweekend/images/touch-icon-ipad.png") }}">
+  <link rel="apple-touch-icon" sizes="120x120" href="{{ asset("bundles/foundershubstartupweekend/images/touch-icon-iphone-retina.png") }}">
+  <link rel="apple-touch-icon" sizes="152x152" href="{{ asset("bundles/foundershubstartupweekend/images/touch-icon-ipad-retina.png") }}">
+  <link rel="shortcut icon" href="{{ asset("bundles/foundershubstartupweekend/images/favicon.ico") }}">
+  <!-- social media -->
+  <!-- Twitter cards support -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="{{ twitter }}">
+  <meta name="twitter:title" content="{{ title }}">
+  <meta name="twitter:description" content="{{ description }}">
+  <meta name="twitter:creator" content="coderbyheart">
+  {% image '@FoundershubStartupWeekendBundle/Resources/public/images/logo.png' %}
+  <meta name="twitter:image:src" content="{{ app.request.uriForPath(asset_url) }}">
+  {% endimage %}
+  <!-- Facebook open graph support -->
+  <meta property="og:title" content="{{ title }}">
+  <meta property="og:description" content="{{ description }}">
+  <meta property="og:site_name" content="{{ title }}">
+  {% image '@FoundershubStartupWeekendBundle/Resources/public/images/logo.png' %}
+  <meta property="og:image" content="{{ app.request.uriForPath(asset_url) }}">
+  {% endimage %}
+  <meta property="og:type" content="website">
 </head>
 
 <body>
@@ -68,9 +67,10 @@ filter='cssrewrite,?uglifycss' %}
           <nav>
             <div class="nav-collapse collapse">
               <ul id="mainnav" class="nav">
-                <li> <a href="#about">About</a> </li>
+                <li><a href="#about">About</a> </li>
                 <li><a href="#judges">Judges</a></li>
                 <li><a href="#venue">Venue</a> </li>
+                <li><a href="#mentors">Mentors</a></li>
                 <li><a href="#demo">Demo</a></li>
                 {% if coaches|default([])|length > 0 %}<li> <a href="#speakers">Speakers</a> </li>{% endif %}
                 {# <li><a href="#schedule">Schedule</a> </li> #}
@@ -93,253 +93,42 @@ filter='cssrewrite,?uglifycss' %}
   <!-- end container -->
 </header>
 <!-- end top-bar -->
-<section id="intro">
-  <div class="container">
-    <div class="flexslider">
-      <ul class="slides">
-        <li>
-          <div class="row jumbotron">
-            <div class="span12 text-center">
-              <h1>{{ title }}</h1>
-              <h3 class="info">
-                  <span class="days">{{ event_start|date('d') }}&ndash;{{ event_end|date('d') }}</span>
-                  <span class="month"><b>{{ event_start|date('M') }}</b></span><span class="year">{{ event_start|date('Y') }}</span>
-                  <span class="location">Frankfurt</span>
-              </h3>
-              <a href="#newsletter" class="btn btn-large">Get tickets</a> </div>
-          </div>
-        </li>
-      </ul>
-    </div>
-  </div>
-  <!-- end container -->
-</section>
-<!-- end intro section -->
-<section id="about">
-  <div class="container">
-    <div class="row">
-      <div class="span12">
-        <div class="module-header about-header">
-          <h4>About</h4>
-        </div>
-        <!-- end module-header -->
-      </div>
-      <div class="span12 hero-unit text-center">
-        <h1>Launch your startup in 54 hours</h1>
-        <h3>
-          <time datetime="{{ event_start|date('Y-m-d') }}">{{ event_start|date('d') }}</time>
-          -
-          <time datetime="{{ event_end|date('Y-m-d') }}">{{ event_end|date('d') }}</time>
-            {{ event_start|date('M Y') }}, Frankfurt</h3>
-        <h4>{{ description }}</h4>
-      </div>
-      <!-- end hero-unit -->
-      <div class="span12">
-        <div class="divider-space"></div>
-      </div>
-      <div class="span4 text-center">
-        <div class="icon-wrap large color1"><i class="iconf-lightbulb"></i> </div>
-        <h3>Pitch your idea</h3>
-        <p>Pitch your idea in front of an international audience. Make it count because only the 10 best ideas will be executed during the weekend.</p>
-      </div>
-      <div class="span4 text-center">
-        <div class="icon-wrap large color2"><i class="iconf-beaker"></i> </div>
-        <h3>Build your startup</h3>
-        <p>Meet the people that will help you bring your idea to life or join a team that fascinates you and work with them during the whole weekend.</p>
-      </div>
-      <div class="span4 text-center">
-        <div class="icon-wrap large color3"><i class="iconf-star"></i> </div>
-        <h3>Present your product</h3>
-        <p>On Sunday your idea will be judged by a panel of international entrepreneurs and startup experts. The winning teams will receive exciting prices and continued support by the judges!</p>
-      </div>
-    </div>
-    <!-- end row -->
-  </div>
-  <!--end container-->
-</section>
-<section id="register">
-  <div class="container">
-    <div class="row">
-      <div id="countdown"></div>
-      <div class="span12 white register-box text-center">
-        <h2 class="register-title">Tickets Available Soon!</h2>
-        <a href="#newsletter" class="btn btn-large btn-primary">Notify me!</a>
-      </div>
-    </div>
-    <!-- end row -->
-  </div>
-  <!-- end container -->
-</section>
 
-{% include "FoundershubStartupWeekendBundle:partials:index/coaches.html.twig" %}
+{% include "FoundershubStartupWeekendBundle:partials:index/intro.html.twig" %}
+
+{% include "FoundershubStartupWeekendBundle:partials:index/about.html.twig" %}
+
+{% include "FoundershubStartupWeekendBundle:partials:index/register.html.twig" %}
+
+{# {% include "FoundershubStartupWeekendBundle:partials:index/coaches.html.twig" %} #}
+
 {# {% include "FoundershubStartupWeekendBundle:partials:index/schedule.html.twig" %} #}
+
 {% include "FoundershubStartupWeekendBundle:partials:index/workshops.html.twig" %}
 
 {% include "FoundershubStartupWeekendBundle:partials:index/tickets.html.twig" %}
+
 {% include "FoundershubStartupWeekendBundle:partials:index/team.html.twig" %}
+
 {% include "FoundershubStartupWeekendBundle:partials:index/judges.html.twig" %}
+
+{% include "FoundershubStartupWeekendBundle:partials:index/mentors.html.twig" %}
+
 {% include "FoundershubStartupWeekendBundle:partials:index/demo.html.twig" %}
 
-<section id="venue" class="white">
-  <div class="container">
-    <div class="row">
-      <div class="span12">
-        <div class="module-header venue-header">
-          <h4>Venue</h4>
-        </div>
-      </div>
-      <div class="span12 hero-unit text-center white">
-        <h4>{{ title }} will take place at</h4>
-        <h2>Deutsche Bahn Silver Tower, Frankfurt</h2>
-        <p>Address: <a href="https://goo.gl/q2xrxq">Jürgen-Ponto-Platz 1, 60329 Frankfurt am Main, Germany</a></p>
-      </div>
-    <div class="span12 text-center">
-            <p>The Silver Tower is one of the first high-rise office buildings in Frankfurt. Between 1978, the year of completion of the 166-meter tall building, and 1990 it was the highest German building until succeeded by the Frankfurt Messeturm. The location between the central station and downtown Frankfurt offers countless culinary experiences and perfect opportunities for short shopping tours. The central station offers ideal conditions for commuters.</p>
-      </div>
+{% include "FoundershubStartupWeekendBundle:partials:index/venue.html.twig" %}
 
-        {#
-      <div class="span12">
-        <div class="subheader">
-          <h4>Getting Here</h4>
-        </div>
-      </div>
-      <div class="span4 text-center">
-        <div class="icon-wrap medium color1"><i class="iconf-flight"></i> </div>
-        <h3>Air Travel</h3>
-        <p>Donec risus augue, ultricies quis ornare ac, malesuada non augue. Ut venenatis tempus semper. Curabitur rhoncus, nulla sed rhoncus sollicitudin, dolor quam vehicula odio.</p>
-      </div>
-      <div class="span4 text-center">
-        <div class="icon-wrap medium color2"><i class="iconf-road"></i> </div>
-        <h3>By Car</h3>
-        <p>Donec risus augue, ultricies quis ornare ac, malesuada non augue. Ut venenatis tempus semper. Curabitur rhoncus, nulla sed rhoncus sollicitudin, dolor quam vehicula odio.</p>
-      </div>
-      <div class="span4 text-center">
-        <div class="icon-wrap medium color3"><i class="iconf-suitcase"></i> </div>
-        <h3>Travel Notes</h3>
-        <p>Donec risus augue, ultricies quis ornare ac, malesuada non augue. Ut venenatis tempus semper. Curabitur rhoncus, nulla sed rhoncus sollicitudin, dolor quam vehicula odio.</p>
-      </div>
-      <div class="span12">
-        <div class="subheader">
-          <h4>Hotels Nearby</h4>
-        </div>
-      </div>
-      <!-- end span12 -->
-      <div class="span4 text-center">
-        <h3>Hotel Babylon</h3>
-        <p>177A Bleecker St. New York, NY 10019 <br>
-          Phone: (212) 234-5670</p>
-        <a href="#" title="website">
-        <div class="icon-wrap small color4"><i class="iconf-monitor"></i> </div>
-        </a> <a href="#" title="map">
-        <div class="icon-wrap small color4"><i class="iconf-map-pointer"></i> </div>
-        </a> </div>
-      <div class="span4 text-center">
-        <h3>Hilbert's Hotel</h3>
-        <p>175 5th Ave. Flatiron District, New York, NY 10010 <br>
-          Phone: (212) 426-3050</p>
-        <a href="#" title="website">
-        <div class="icon-wrap small color4"><i class="iconf-monitor"></i> </div>
-        </a> <a href="#" title="map">
-        <div class="icon-wrap small color4"><i class="iconf-map-pointer"></i> </div>
-        </a> </div>
-      <div class="span4 text-center">
-        <h3>Hyperion Hotel</h3>
-        <p>890 5th Ave. New York, NY 10019 <br>
-          Phone: (212) 357-4600</p>
-        <a href="#" title="website">
-        <div class="icon-wrap small color4"><i class="iconf-monitor"></i> </div>
-        </a> <a href="#" title="map">
-        <div class="icon-wrap small color4"><i class="iconf-map-pointer"></i> </div>
-        </a> </div>
-    #}
-    </div>
-    <!-- end row -->
-  </div>
-<!-- end container -->
-</section>
-<!-- end venue -->
-<section id="map">
-  <div id="map_canvas"></div>
-  <!-- end Map Canvas -->
-</section>
-<!-- end map -->
+{% include "FoundershubStartupWeekendBundle:partials:index/map.html.twig" %}
+
 {% include "FoundershubStartupWeekendBundle:partials:index/sponsors.html.twig" %}
 {% include "FoundershubStartupWeekendBundle:partials:index/news.html.twig" %}
 
-<section id="contact" class="white">
-  <div class="container">
-    <div class="row">
-      <div class="span12">
-        <div class="module-header contact-header">
-          <h4>Imprint</h4>
-        </div>
-      </div> <!-- end span12 -->
-      <div class="span12 hero-unit text-center white">
-        <h2>Get in touch</h2>
-        <p>We'd love to hear from you!</p>
-      </div>
-      <!-- end hero-unit -->
-        <div class="span12 text-center">
-            <div class="social">
-                {#<a href="#" target="_blank" title="Facebook" class="icon-wrap small facebook"> <i
-                            class="iconf-facebook"></i> </a>#}
-                <a href="https://twitter.com/{{ twitter }}" target="_blank" title="Twitter"
-                   class="icon-wrap small twitter" rel="me"> <i class="iconf-twitter"></i> </a>
-        </div>
-      <div class="span12 text-center">
-        <div class="subheader">
-          <h4>{{ org }} is represented by</h4>
-        </div>
-        <!-- -->
-      </div>
-      <div class="span12 text-center">
-        <p>S2S GmbH<br>
-            Mario Hachemer<br>
-            Kruppstraße 105<br>
-            60388 Frankfurt am Main<br>
-            Germany
-        </p>
-          <p><i class="iconf-mobile"></i> <a href="tel:{{ contact_phone }}">{{ contact_phone }}</a> </p>
-          <p><i class="iconf-mail"></i> <a href="mailto:{{ email }}">{{ email }}</a> </p>
-      </div>
-    </div>
-    <!-- end row -->
-  </div>
-  <!-- end container -->
-</section>
-<!-- end contact -->
+{% include "FoundershubStartupWeekendBundle:partials:index/contact.html.twig" %}
 
-<section id="newsletter">
-  <div class="container">
-    <div class="row">
-      <div class="span12 hero-unit text-center">
-        <h2>Be the first to know when the ticket sales starts!</h2>
-      </div>
+{% include "FoundershubStartupWeekendBundle:partials:index/newsletter.html.twig" %}
 
-      <form action="//startupweekend-rheinmain.us4.list-manage.com/subscribe/post?u=408757266f397b128aeb12669&amp;id=aa813194b9" method="post" target="_blank">
-        <div class="control-group span4 offset4 text-center">
-          <div class="controls">
-            <input type="email" id="subscribe-email" class="input-block-level" value="Your Email Address" required name="EMAIL" />
-            <input type="submit" class="btn btn-primary" value="Subscribe" />
-            <input type="hidden" name="EMAILTYPE" value="html" />
-          </div>
-        </div>
-      </form>
-    </div>
-    <!-- end row -->
-  </div>
-  <!-- end container -->
-</section>
-<!-- end newsletter -->
-<section id="twitter-feed">
-    <div class="container">
-        <div class="row">
-            <div class="span10 offset1 text-center">
-                <div class="tweet"></div>
-                <a href="https://twitter.com/{{ twitter }}" class="btn btn-follow" rel="me" target="_blank">Follow Us <i class="iconf-twitter"></i></a> </div>
-        </div>
-    </div>
-</section>
+{% include "FoundershubStartupWeekendBundle:partials:index/twitter_feed.html.twig" %}
+
 <footer id="footer">
   <div class="container">
     <div class="row">
@@ -352,8 +141,8 @@ filter='cssrewrite,?uglifycss' %}
   <!-- end container -->
 </footer>
 <!-- end Document -->
-<!-- javascripts -->
 
+<!-- javascripts -->
 {# Minifcation breaks those shipped libs #}
 <script type="text/javascript" src="{{ asset("bundles/foundershubstartupweekend/js/jquery-1.10.2.js") }}"></script>
 <script type="text/javascript" src="{{ asset("bundles/foundershubstartupweekend/js/jquery.mobile-1.0.js") }}"></script>
