Use scaled images from contentful.

--- a/Resources/views/partials/index/coaches.html.twig
+++ b/Resources/views/partials/index/coaches.html.twig
@@ -27,7 +27,7 @@
         <!-- carousel item -->
         <div class="item">
             <div class="photo-wrap hover_colour"><img
-                        src="{{ asset("bundles/foundershubstartupweekend/images/photos/face01.jpg") }}" alt=" "></div>
+                        src="{{ mentor.avatar.file.thumbnails.person }}" alt=" "></div>
             <div class="text-wrap white">
                 <h3>{{ mentor.firstName }}</h3>
                 <h5>Designer at Cottage</h5>
