--- a/Resources/views/partials/index/judges.html.twig
+++ b/Resources/views/partials/index/judges.html.twig
@@ -27,7 +27,7 @@
                                 <div class="item">
 
                                     <div class="photo-wrap hover_colour">
-                                        <img src="{{ asset(judge.avatar.file.url) }}" alt=" {{ judge.firstName }}">
+                                        <img src="{{ judge.avatar.file.thumbnails.person }}" alt=" {{ judge.firstName }}">
                                     </div>
 
                                     <div class="text-wrap white">
