--- a/Resources/views/partials/index/sponsors.html.twig
+++ b/Resources/views/partials/index/sponsors.html.twig
@@ -14,7 +14,7 @@
 {% endif %}
             <div class="span3 text-center">
                 <a href="{{ sponsor.link }}" rel="friend met">
-                    <img src="{{ asset(sponsor.logo.file.url) }}" alt="{{ sponsor.name }}" class="sponsor-logo">
+                    <img src="{{ sponsor.logo.file.thumbnails.sponsor }}" alt="{{ sponsor.name }}" class="sponsor-logo">
                 </a>
             </div>
 {% if loop.last %}
