--- a/Resources/views/partials/index/demo.html.twig
+++ b/Resources/views/partials/index/demo.html.twig
@@ -1,4 +1,4 @@
-<section id="demo" class="x-section">
+<section id="demo" class="x-section white-bg">
     <div class="container">
         <div class="row">
             <div class="span12">
@@ -10,6 +10,10 @@
                     <h2>SET THIS JUMBO TITLE</h2>
 
                     <p>lorem ipsum dolor sit amet, consectetur</p>
+                </div>
+                
+                <div id="youtube">
+                    <div width="560" height="315" src="" frameborder="0" allowfullscreen></div>
                 </div>
 
                 <div class="span12">
