--- a/Resources/views/partials/index/sponsors.html.twig
+++ b/Resources/views/partials/index/sponsors.html.twig
@@ -1,6 +1,6 @@
 {% for sponsor in startupweekend_content('Sponsor') %}
 {% if loop.first %}
-<section id="sponsors">
+<section id="sponsors" class="x-section white-bg">
     <div class="container">
         <div class="row">
             <div class="span12">
