--- a/Resources/views/partials/index/venue.html.twig
+++ b/Resources/views/partials/index/venue.html.twig
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="span12">
         <div class="module-header venue-header">
-          <h4>Venue</h4>
+          <h4 style="color: rgba(255,255,255,0.75);">Venue</h4>
         </div>
       </div>
       <div class="span12 hero-unit text-center white">
