--- a/Resources/public/css/style_additions.css
+++ b/Resources/public/css/style_additions.css
@@ -1,3 +1,11 @@
+.bio-hidden {
+    opacity: 0;
+}
+
+div.item:hover .bio-hidden {
+    opacity: 1;
+}
+
 section.x-section {
     padding: 100px 0 150px;
     -webkit-box-shadow: 0 5px 0 rgba(30, 38, 44, 0.2) inset;
@@ -31,7 +39,7 @@ body {
 }
 a {
     color: #E42E17;
-    /*color: #48A3A6;*/
+    /*color: #ad4340;*/
     text-decoration: none;
     -webkit-transition: color 0.25s;
     -moz-transition: color 0.25s;
@@ -63,9 +71,37 @@ h1, h2 {
     font-family: 'Roboto Slab Bold';
     font-weight: bold;
     line-height: 40px;
-    margin: 5px 0 20px;
     text-rendering: optimizelegibility;
+    margin: 0;
+    margin-bottom: 20px;
 }
+
+h1, h2, h3 {
+    color: #eee;
+}
+h4, h5, h6 {
+    color: #eee;
+}
+
+.white-bg {
+    color: #393E46;
+}
+
+.white-bg h1,
+.white-bg h2 {
+    color: #E42E17 !important;
+}
+.white-bg h3 {
+    color: #585858;
+    /*color: #757575;*/
+}
+.white-bg h4,
+.white-bg h5,
+.white-bg h6 {
+    color: #757575;
+}
+
+
 ul {
     list-style-type: none;
 }
@@ -81,7 +117,7 @@ sup {
     -ms-border-radius: 8px;
     -o-border-radius: 8px;
     border-radius: 8px;
-    background: #48A3A6;
+    background: #e74848;
     color: white;
     font-size: 16.5px;
     text-decoration: none;
@@ -98,7 +134,7 @@ sup {
     outline: 0;
 }
 .btn:hover, .btn:focus {
-    background-color: #66cccc;
+    background-color: #e42e17;
     color: white;
     -webkit-transition: 0.25s;
     -moz-transition: 0.25s;
@@ -108,8 +144,8 @@ sup {
     outline: 0;
 }
 .btn:active, .btn.active {
-    background-color: #3d4e58;
-    color: rgba(255, 255, 255, 0.75);
+    background: #ad4340;
+    color: rgba(255, 255, 255, 1);
     -webkit-box-shadow: none;
     -moz-box-shadow: none;
     box-shadow: none;
@@ -187,7 +223,7 @@ sup {
     background: none;
   border-color: rgba(0, 0, 0, 0);
   border-radius: 0;
-  color: #48A3A6;
+  color: #ad4340;
   cursor: pointer;
 }
 .btn.btn-link:hover, .btn.btn-link:focus {
@@ -235,7 +271,7 @@ sup {
     box-shadow: 0 0 0;
 }
 .navbar .btn-navbar:hover, .navbar .btn-navbar:focus, .navbar .btn-navbar:active, .navbar .btn-navbar.active, .navbar .btn-navbar.disabled, .navbar .btn-navbar[disabled] {
-    background-color: #48A3A6;
+    background-color: #ad4340;
     color: #FFFFFF;
 }
 /* Forms */
@@ -437,19 +473,20 @@ nav select {
     background: none repeat scroll 0 0 #FFFFFF;
 }
 #register {
-    background: /*#7bc1a1*/url(../images/backgrounds/intro.jpg) center center no-repeat fixed;
+    background: /*#7bc1a1*/url(../images/backgrounds/intro_dim.jpg) center center no-repeat fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
     padding: 60px 0;
+    overflow: hidden;
 }
 #speakers {
-    background: #b22b1a !important;
+    background: #eee !important;
 }
 
 #judges {
-    background: #555 !important;
+    background: #605353 !important;
 }
 
 #schedule {
@@ -477,7 +514,8 @@ nav select {
     padding: 60px 0;
 }
 #contact {
-    background: #4C5D67;
+    /*background: #4C5D67;*/
+    background: #eee;
     padding-bottom: 80px;
 }
 #newsletter {
@@ -498,6 +536,7 @@ footer {
 footer img {
     margin: 10px 0 15px;
 }
+
 /*  -----------------------------------------------------   /*
     DIVIDERS, HEADERS & SUBHEADERS
 /*  -----------------------------------------------------   /*
@@ -580,7 +619,7 @@ hr.divider-short {
 }
 .subheader h4 {
     background-color: rgba(0, 0, 0, 0);
-    color: #48A3A6;
+    color: #ad4340;
     display: inline-block;
     font-size: 16px;
     font-weight: 700 !important;
@@ -606,7 +645,7 @@ hr.divider-short {
 }
 .hero-unit > h1, .hero-unit > h2 {
     letter-spacing: 0;
-    line-height: 1;
+    line-height: 1.2;
     margin: 0 0 20px;
 }
 .hero-unit > h2 {
@@ -659,7 +698,7 @@ hr.divider-short {
     background: #FFFFFF;
 }
 .icon-wrap.color1 {
-    background: #48A3A6;
+    background: #ad4340;
 }
 .icon-wrap.color2 {
     background: #EF7247;
@@ -741,7 +780,7 @@ a.icon-wrap.small {
     width: 40px;
 }
 .icon-wrap.small.color4:hover {
-    background: #48A3A6;
+    background: #ad4340;
 }
 /* Social Icons */
 .social a.icon-wrap i {
@@ -1007,7 +1046,7 @@ a.instagram:hover {
     transition: all 0.4s ease-in-out;
 }
 .share-widget > a:hover {
-    color: #48A3A6;
+    color: #ad4340;
 }
 /* Entry */
 .entry-title {
