--- a/Resources/views/partials/index/about.html.twig
+++ b/Resources/views/partials/index/about.html.twig
@@ -1,4 +1,4 @@
-<section id="about">
+<section id="about" class="x-section white-bg">
   <div class="container">
     <div class="row">
       <div class="span12">
