--- a/Resources/views/partials/index/contact.html.twig
+++ b/Resources/views/partials/index/contact.html.twig
@@ -1,4 +1,4 @@
-<section id="contact" class="white">
+<section id="contact" class="x-section white-bg">
   <div class="container">
     <div class="row">
       <div class="span12">
@@ -6,7 +6,7 @@
           <h4>Imprint</h4>
         </div>
       </div> <!-- end span12 -->
-      <div class="span12 hero-unit text-center white">
+      <div class="span12 hero-unit text-center">
         <h2>Get in touch</h2>
         <p>We'd love to hear from you!</p>
       </div>
