--- a/Resources/views/partials/index/intro.html.twig
+++ b/Resources/views/partials/index/intro.html.twig
@@ -6,6 +6,7 @@
           <div class="row jumbotron">
             <div class="span12 text-center">
               <h1>{{ title }}</h1>
+              <h2>{{ short_description }}</h2>
               <h3 class="info">
                   <span class="days">{{ event_start|date('d') }}&ndash;{{ event_end|date('d') }}</span>
                   <span class="month"><b>{{ event_start|date('M') }}</b></span><span class="year">{{ event_start|date('Y') }}</span>
