--- a/Resources/views/partials/index/newsletter.html.twig
+++ b/Resources/views/partials/index/newsletter.html.twig
@@ -1,15 +1,23 @@
-<section id="newsletter">
+<section id="newsletter" class="x-section white-bg">
   <div class="container">
     <div class="row">
-      <div class="span12 hero-unit text-center">
-        <h2>Be the first to know when the ticket sales starts!</h2>
+      <div class="span12">
+        <div class="span12 hero-unit text-center">
+          <div class="module-header tickets-header">
+              <h4>Newsletter</h4>
+          </div>
+
+          <div class="span12 hero-unit text-center">
+            <h2>Be the first to know when the ticket sales starts!</h2>        
+          </div>
+        </div>
       </div>
 
       <form action="//startupweekend-rheinmain.us4.list-manage.com/subscribe/post?u=408757266f397b128aeb12669&amp;id=aa813194b9" method="post" target="_blank">
         <div class="control-group span4 offset4 text-center">
           <div class="controls">
             <input type="email" id="subscribe-email" class="input-block-level" value="Your Email Address" required name="EMAIL" />
-            <input type="submit" class="btn btn-primary" value="Subscribe" />
+            <input type="submit" class="btn" value="Subscribe" />
             <input type="hidden" name="EMAILTYPE" value="html" />
           </div>
         </div>
