--- a/Resources/views/partials/index/register.html.twig
+++ b/Resources/views/partials/index/register.html.twig
@@ -1,4 +1,5 @@
 <section id="register">
+  <div class="dim-bg"></div>
   <div class="container">
     <div class="row">
       <div id="countdown"></div>
