temporally removed _demo_ from navigation

--- a/Resources/views/Page/index.html.twig
+++ b/Resources/views/Page/index.html.twig
@@ -73,7 +73,7 @@
                 <li><a href="#judges">Judges</a></li>
                 <li><a href="#venue">Venue</a> </li>
                 <li><a href="#speakers">Mentors</a></li>
-                <li><a href="#demo">Demo</a></li>
+                {# <li><a href="#demo">Demo</a></li> #}
                 {% if coaches|default([])|length > 0 %}<li> <a href="#speakers">Speakers</a> </li>{% endif %}
                 {# <li><a href="#schedule">Schedule</a> </li> #}
                 {% if workshops|default([])|length > 0 %}<li><a href="#workshops">Workshops</a> </li>{% endif %}
