--- a/Resources/views/partials/index/contact.html.twig
+++ b/Resources/views/partials/index/contact.html.twig
@@ -1,39 +1,55 @@
 <section id="contact" class="x-section white-bg">
   <div class="container">
     <div class="row">
+
       <div class="span12">
-        <div class="module-header contact-header">
-          <h4>Imprint</h4>
+        <div class="l-box">
+          <div class="module-header contact-header">
+            <h4>Imprint</h4>
+          </div>
         </div>
-      </div> <!-- end span12 -->
-      <div class="span12 hero-unit text-center">
-        <h2>Get in touch</h2>
-        <p>We'd love to hear from you!</p>
       </div>
-      <!-- end hero-unit -->
+
+      <div class="span12 hero-unit text-center">
+        <div class="l-box">
+          <h2>Get in touch</h2>
+          <p>We'd love to hear from you!</p>
+        </div>
+      </div>
+
         <div class="span12 text-center">
+          <div class="l-box">
             <div class="social">
                 {#<a href="#" target="_blank" title="Facebook" class="icon-wrap small facebook"> <i
                             class="iconf-facebook"></i> </a>#}
                 <a href="https://twitter.com/{{ twitter }}" target="_blank" title="Twitter"
                    class="icon-wrap small twitter" rel="me"> <i class="iconf-twitter"></i> </a>
+            </div>
+          </div>
         </div>
+      
       <div class="span12 text-center">
-        <div class="subheader">
-          <h4>{{ org }} is represented by</h4>
+        <div class="l-box">
+          <div class="subheader">
+            <h4>{{ org }} is represented by</h4>
+          </div>
         </div>
-        <!-- -->
       </div>
+
       <div class="span12 text-center">
-        <p>S2S GmbH<br>
+        <div class="l-box">
+          <p>
+            S2S GmbH<br>
             Mario Hachemer<br>
             Kruppstraße 105<br>
             60388 Frankfurt am Main<br>
             Germany
-        </p>
-          <p><i class="iconf-mobile"></i> <a href="tel:{{ contact_phone }}">{{ contact_phone }}</a> </p>
-          <p><i class="iconf-mail"></i> <a href="mailto:{{ email }}">{{ email }}</a> </p>
+          </p>
+            <p><i class="iconf-mobile"></i> <a href="tel:{{ contact_phone }}">{{ contact_phone }}</a> </p>
+            <p><i class="iconf-mail"></i> <a href="mailto:{{ email }}">{{ email }}</a> </p>
+        </div>
       </div>
+
     </div>
     <!-- end row -->
   </div>
