--- a/Resources/views/partials/index/schedule.html.twig
+++ b/Resources/views/partials/index/schedule.html.twig
@@ -25,9 +25,14 @@
                         <h2>First Day</h2>
 {#                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin bibendum ipsum eget nulla molestie, vitae ultricies nulla dapibus. Nulla vel faucibus erat, sed malesuada purus. Quisque varius metus et erat pulvinar luctus. Fusce neque arcu, viverra
                             vel dui vitae, commodo vulputate orci. Cras et ipsum placerat, semper tortor a, venenatis enim. Morbi a vehicula nibh, ac bibendum nulla. Praesent tincidunt neque eget lectus mattis ullamcorper.</p> #}
-                        <div class="schedule-download"><a href="#" class="btn"><i class="iconf-acrobat"></i>
+                        
+                        {# <div class="schedule-download">
+                            <a href="#" class="btn">
+                                <i class="iconf-acrobat"></i>
                                 <p>Full Schedule</p>
-                            </a> </div>
+                            </a>
+                        </div> #}
+                    
                     </div>
                     <!-- end span4 -->
                     <div class="span8">
@@ -75,9 +80,14 @@
                     <!-- DAY TWO -->
                     <div class="span4">
                         <h2>Second Day</h2>
-                        <div class="schedule-download"><a href="#" class="btn"><i class="iconf-acrobat"></i>
+                        
+                        {# <div class="schedule-download">
+                            <a href="#" class="btn">
+                                <i class="iconf-acrobat"></i>
                                 <p>Full Schedule</p>
-                            </a> </div>
+                            </a>
+                        </div> #}
+                    
                     </div>
                     <!-- end span4 -->
                     <div class="span8">
@@ -126,9 +136,14 @@
                         <h2>Third Day</h2>
 {#                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin bibendum ipsum eget nulla molestie, vitae ultricies nulla dapibus. Nulla vel faucibus erat, sed malesuada purus. Quisque varius metus et erat pulvinar luctus. Fusce neque arcu, viverra
                             vel dui vitae, commodo vulputate orci. Cras et ipsum placerat, semper tortor a, venenatis enim. Morbi a vehicula nibh, ac bibendum nulla. Praesent tincidunt neque eget lectus mattis ullamcorper.</p> #}
-                        <div class="schedule-download"><a href="#" class="btn"><i class="iconf-acrobat"></i>
+                        
+                        {# <div class="schedule-download">
+                            <a href="#" class="btn">
+                                <i class="iconf-acrobat"></i>
                                 <p>Full Schedule</p>
-                            </a> </div>
+                            </a>
+                        </div> #}
+                    
                     </div>
                     <!-- end span4 -->
                     <div class="span8">
