--- a/Resources/views/partials/index/contact.html.twig
+++ b/Resources/views/partials/index/contact.html.twig
@@ -20,8 +20,8 @@
         <div class="span12 text-center">
           <div class="l-box">
             <div class="social">
-                {#<a href="#" target="_blank" title="Facebook" class="icon-wrap small facebook"> <i
-                            class="iconf-facebook"></i> </a>#}
+                <a href="https://www.facebook.com/swRheinMain" target="_blank" title="Facebook" class="icon-wrap small facebook"> <i
+                            class="iconf-facebook"></i> </a>
                 <a href="https://twitter.com/{{ twitter }}" target="_blank" title="Twitter"
                    class="icon-wrap small twitter" rel="me"> <i class="iconf-twitter"></i> </a>
             </div>
