--- a/Resources/views/partials/index/newsletter.html.twig
+++ b/Resources/views/partials/index/newsletter.html.twig
@@ -8,7 +8,7 @@
           </div>
 
           <div class="span12 hero-unit text-center">
-            <h2>Be the first to know when the ticket sales starts!</h2>        
+            <h2>Stay up to date with all things concerning Startup Weekend!</h2>
           </div>
         </div>
       </div>
